[Update] refactoring plotly base helper

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -14,7 +14,7 @@
     "from modifier.curveProperty import CurveProperty\n",
     "from modifier.pointProperty import PointProperty, Point2D\n",
     "\n",
-    "from plotlyhelper.plotly_helper import DisplayPropertyModifier, DisplayValuePropertyLerp, MakeFullPropertyExample\n",
+    "from plotlyhelper.helper import DisplayPropertyModifier, DisplayValuePropertyLerp, MakeFullPropertyExample\n",
     "from plotlyhelper.pointProperty_helper import displayPoint2D, displayPointsProperty"
    ]
   },
