[Update] main and rnd in curveProperty

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -116,6 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "tmp1 : ValueProperty = rnd_Property()\n",
     "tmp1.quickPrint()\n",
     "\n",
@@ -125,7 +126,8 @@
     "    tmp2.quickPrint()\n",
     "\n",
     "    DisplayValuePropertyLerp(iter_lerp, tmp1, tmp2, f\"example {i}\")\n",
-    "    print(\"\\n\\n\")"
+    "    print(\"\\n\\n\\n\\n\\n\\n\\n\\n\")\n",
+    "\"\"\""
    ]
   },
   {
