[New] more analysis

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -13,9 +13,30 @@
     "from base.propertyClass import FullProperty, ValueProperty\n",
     "from modifier.curveProperty import CurveProperty\n",
     "from modifier.pointProperty import PointProperty, Point2D\n",
+    "from analyzer.analyzer import analyseOneFullProperty, mappingToPercent\n",
     "\n",
     "from plotlyhelper.helper import DisplayPropertyModifier, DisplayValuePropertyLerp, MakeFullPropertyExample\n",
-    "from plotlyhelper.pointProperty_helper import displayPoint2D, displayPointsProperty"
+    "from plotlyhelper.pointProperty_helper import displayPoint2D, displayPointsProperty\n",
+    "from plotlyhelper.analyzer_helper import displayAppearanceMapping, displayMapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56b14214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnd_value = lambda : random.uniform(1, 100)\n",
+    "\n",
+    "def rnd_ValueProperty_Curve() -> ValueProperty :\n",
+    "    return ValueProperty(rnd_value(), CurveProperty.rnd())\n",
+    "\n",
+    "def rnd_ValueProperty_Point() -> ValueProperty :\n",
+    "    return ValueProperty(rnd_value(), PointProperty.rnd_AutoCircle())\n",
+    "\n",
+    "rnd_Property = rnd_ValueProperty_Curve\n",
+    "rnd_FullProperty = lambda : FullProperty(rnd_Property(), rnd_Property())"
    ]
   },
   {
@@ -93,25 +114,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b14214",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rnd_value = lambda : random.uniform(1, 100)\n",
-    "\n",
-    "def rnd_ValueProperty_Curve() -> ValueProperty :\n",
-    "    return ValueProperty(rnd_value(), CurveProperty.rnd())\n",
-    "\n",
-    "def rnd_ValueProperty_Point() -> ValueProperty :\n",
-    "    return ValueProperty(rnd_value(), PointProperty.rnd_AutoCircle())\n",
-    "\n",
-    "rnd_Property = rnd_ValueProperty_Curve\n",
-    "rnd_FullProperty = lambda : FullProperty(rnd_Property(), rnd_Property())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "05f9aedd",
    "metadata": {},
    "outputs": [],
@@ -150,6 +152,50 @@
     "\n",
     "    MakeFullPropertyExample(iter_repeat, tmp1, tmp2)\n",
     "    print(\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c027b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp1 : FullProperty = rnd_FullProperty()\n",
+    "tmp1.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9729814d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repeat = 1000\n",
+    "iter_repeat = [i/repeat for i in range(0, repeat+1)]\n",
+    "comparator = [rnd_FullProperty() for _ in iter_repeat]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c03a88a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping = analyseOneFullProperty(tmp1, comparator, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a819f09e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(mapping)\n",
+    "displayAppearanceMapping(mapping, \"example\")"
    ]
   }
  ],
