[New] add combinaison analyzer

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -8,16 +8,18 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "from typing import cast\n",
+    "from typing import cast, List\n",
+    "from itertools import product, combinations\n",
     "\n",
     "from base.propertyClass import FullProperty, ValueProperty\n",
     "from modifier.curveProperty import CurveProperty\n",
     "from modifier.pointProperty import PointProperty, Point2D\n",
     "from analyzer.analyzer import analyseOneFullProperty, mappingToPercent\n",
+    "from analyzer.listanalyzer import analyzeProperties\n",
     "\n",
     "from plotlyhelper.helper import DisplayPropertyModifier, DisplayValuePropertyLerp, MakeFullPropertyExample\n",
     "from plotlyhelper.pointProperty_helper import displayPoint2D, displayPointsProperty\n",
-    "from plotlyhelper.analyzer_helper import displayAppearanceMapping, displayMapping"
+    "from plotlyhelper.analyzer_helper import displayAppearanceMapping, displayMapping, displayFullAnalyzerResult"
    ]
   },
   {
@@ -37,6 +39,61 @@
     "\n",
     "rnd_Property = rnd_ValueProperty_Curve\n",
     "rnd_FullProperty = lambda : FullProperty(rnd_Property(), rnd_Property())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2300068e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnd = [rnd_FullProperty() for i in range(7)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "440eb797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r in rnd :\n",
+    "    r.print()\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2caf6ecb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = analyzeProperties(rnd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dd00b9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in res.combinaison :\n",
+    "    print(\"\\n\")\n",
+    "    for j in i.valuePropertyCentiles :\n",
+    "        print(j.centiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00003253",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "displayFullAnalyzerResult(res)"
    ]
   },
   {
